--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "com.unity-atoms.unity-atoms": "https://github.com/unity-atoms/unity-atoms.git#master",
     "com.unity.addressables": "1.19.19",
     "com.unity.ide.rider": "3.0.15",
+    "com.unity.inputsystem": "1.3.0",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
